# Taskmaster

./: Cargo.toml  README.md  build_tests.sh  server.py  test.c
config/: goodnight  lol  ratio  run.yml  signal
src/: commands.rs  config.rs  logs.rs  main.rs  program.rs
tests/: env.c  failure.c  signal.c  umask.c  wait.c
